--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,207 +1,397 @@
-    @import url('https://fonts.googleapis.com/css2?family=Mukta:wght@300&family=Quicksand:wght@300;400;500  ;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@300&family=Quicksand:wght@300;400;500  ;600;700&display=swap');
 
-    $work-frames-color: #FB2576, #D7BB27, #85ED7C;
+$work-frames-color: #FB2576, #D7BB27, #85ED7C;
 
-    @keyframes text-animation-exit{
-        0% {
-            opacity: 1;
-            transform: translateY(0);
-        }
-        100%{
-            opacity: 0;
-            transform: translateY(30px);
+@keyframes text-animation-exit{
+    0% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    100%{
+        opacity: 0;
+        transform: translateY(30px);
+    }
+}
+
+@keyframes text-animation-enter{
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    100%{
+        opacity: 0;
+        transform: translateY(0px);
+    }
+}
+
+@keyframes icon-animation-growth-color{
+    0%{
+        transform: scale(0);
+        opacity: 0;
+    }
+    100%{
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+body {
+    background-color: #000000;
+    color: #ffffff;
+    font-family: "Quicksand", sans-serif !important;
+}
+
+.btn {
+    font-family: "Quicksand", sans-serif !important;
+    margin-top: 40px;
+    font-size: 25px;
+    font-weight: 600;
+    height: 45px;
+    width: 170px;
+    cursor: pointer;
+}
+
+.text-section {
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.inner-header{
+    margin-top: 40px;
+    font-size: 30px;
+    font-weight: 600;
+}
+
+nav{
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 100px;
+    ul{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        gap: 20px;
+        li{
+            font-size: 18px;
+            font-weight: 400;
+        
+            a{
+                color: #ffffff;
+                text-decoration: underline 3px rgba(251, 35, 118,0);
+                text-underline-offset: 10px;
+                transition: text-decoration-color 0.7s;
+
+                &:hover{
+                    text-decoration-color: rgba(251, 35, 118,1);
+                }
+            }
         }
     }
+}
 
-    @keyframes text-animation-enter{
-        0% {
-            opacity: 0;
-            transform: translateY(30px);
+.text-animator {
+    display: block;
+    height: 400px;
+    .main-wrapper{
+        display: block;
+        margin-top: 200px;
+        
+        h1{
+            text-align: center;
+            margin-bottom: 20px;
+            font-size: 25px;
+            font-weight: 300;
         }
-        100%{
-            opacity: 0;
-            transform: translateY(0px);
+        
+        .highlight{
+            font-weight: bold;
+        }
+
+        .pharse-animated{
+            display: block;
+            width: 100%;
+            animation: text-animation-exit 2s infinite;
+            animation-delay: 1s;
         }
     }
+}
 
-    @keyframes icon-animation-growth-color{
-        0%{
-            transform: scale(0);
-            opacity: 0;
+.section{
+    margin-top: 150px;
+    text-align: center;
+}
+
+.about-section{
+    flex-direction: column;
+
+    .about-wrapper{
+        margin-top: 100px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 50px;
+
+        img{
+            width: 250px;
+            height: 250px;
+            border-radius: 50%;
+            border: 11px solid #4073A3;
         }
-        100%{
-            transform: scale(1);
-            opacity: 1;
+
+        .about-text{
+            margin-top: -40px;
+            width: 70%;
+
+            p{
+                margin-top: 40px;
+                display: block;
+                font-size: 20px;
+                word-wrap: wrap;
+                font-weight: 300;
+            }
+        }
+
+        .about-resume{
+            margin-top: 40px;
+            a{
+                text-decoration: none;
+                color: white;
+            }
+            span{
+                visibility: hidden;
+                display: block;
+                margin-right: 20px;
+            }
         }
     }
+}
 
-    body {
-        background-color: #000000;
-        color: #ffffff;
-        font-family: "Quicksand", sans-serif !important;
+
+.skills-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    .grid-skills{
+        margin-top: 100px;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        justify-items: center;
+        gap: 40px 0px;
+        .grid-skills-item{
+            img{
+                width: 35px;
+                height: 35px;
+                margin: auto;
+            }
+
+            span{
+                display: block;
+                text-align: center;
+                margin-top: 20px;
+                font-size: 15px;
+                font-weight: 300;
+            }
+        }
     }
-
-    .btn {
-        font-family: "Quicksand", sans-serif !important;
+    
+    p {
         margin-top: 40px;
-        font-size: 25px;
-        font-weight: 600;
-        height: 45px;
-        width: 170px;
-        cursor: pointer;
+        font-size: 15px;
+        text-align: left;
+        font-weight: 400;
+        width: 85%;
     }
+}
 
-    .text-section {
-        font-size: 25px;
+.work-section{
+    .work-showcase{    
+        display: block;
+        
+        .work:nth-child(2){
+            flex-direction: column-reverse;
+        }
+
+        .work{
+            margin-top: 120px;
+            display: flex;
+            text-align: center;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+
+            img {
+                width: 300px;
+                height: 400px;
+
+                @for $i from 1 through length($work-frames-color) {
+                    &:nth-child(#{$i}) {
+                        border: 8px solid nth($work-frames-color, $i);
+                    }
+                }
+            }
+
+            .work-text{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                width: 60%;
+
+                h4{
+                    font-size: 30px;
+                    font-weight: 400;
+                }
+    
+                p {
+                    width: 100%;
+                    text-align: center;
+                    margin-top: 20px;
+                    font-size: 20px;
+                    font-weight: 400;
+                    line-height: 40px;
+                } 
+            }
+        }
+    }
+    p{
+        margin-top: 40px;
+        font-size: 20px;
         font-weight: 400;
     }
+}
 
-    .inner-header{
-        margin-top: 40px;
-        font-size: 40px;
-        font-weight: 600;
-    }
+.contact-section {
+    margin-bottom: 200px;
 
-    .menu-navbar{
-        position: sticky;
-        top: 0;
-        width: 100%;
-        height: 100px;
-        ul{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100%;
-            gap: 67px;
-            li{
+    .contact-container {
+        
+        .contact-form{
+            .input-form {
+                margin-top: 40px;
+                width: 78%;
+                height: 50px;
                 font-size: 20px;
                 font-weight: 400;
+                border: none;
+                border-bottom: 2px solid #ffffff;
+                background-color: transparent;
+                color: #ffffff;
+                outline: none;
+                transition: border-bottom-color 0.7s;
+                font-family: "Quicksand", sans-serif !important;
+    
+                &:placeholder{
+                    color: rgba(255,255,255,0.7)
+                }
+                &:focus{
+                    border-bottom-color: #FB2576;
+                }
+            }    
             
-                a{
-                    color: #ffffff;
-                    text-decoration: underline 3px rgba(251, 35, 118,0);
-                    text-underline-offset: 10px;
-                    transition: text-decoration-color 0.7s;
+            textarea{
+                resize: none;
+            }
+        }
 
+        .social-media{
+            a{
+                svg{
+                    margin-top: 10px;
+                    width: 50px;
+                    height: 50px;
+                    cursor: pointer;    
+                    transition: all .2s ease-in-out;
+    
                     &:hover{
-                        text-decoration-color: rgba(251, 35, 118,1);
+                        fill: #FB2576;
+                        transform: scale(1.2);
                     }
                 }
             }
         }
     }
+}
 
-    .text-animator {
-        display: block;
-        height: 400px;
-        
+footer{
+    display: block;
+    background-color: #D9D9D9;
+    color: black;
+    text-align: center;
+    height: 30px;
+
+    p {
+        padding-top: 10px;
+        font-size: 15px;
+        font-weight: bold;
+    }
+}
+
+@media screen and (min-width: 728px) {
+
+    nav{
+        ul{
+            li{
+                font-size: 25px;
+            }
+        }
+    }
+    
+    .text-animator{
         .main-wrapper{
-            display: block;
-            margin-top: 200px;;
-            
             h1{
-                text-align: center;
-                margin-bottom: 20px;
-                margin-left: auto;
-                font-size: 60px;
-                font-weight: 300;
+                font-size: 40px;
             }
-            .highlight{
-                font-weight: bold;
-            }
-
             .pharse-animated{
                 display: inline-block;
-                width: 500px;
-                text-align: left;
-                animation: text-animation-exit 2s infinite;
-                animation-delay: 1s;
+                width: fit-content;
             }
         }
     }
 
     .section{
-        margin-top: 200px;
         text-align: center;
     }
 
     .about-section{
-        flex-direction: column;
-
         .about-wrapper{
-            margin-top: 100px;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: center;
-            gap: 50px;
-
             img{
-                width: 250px;
-                height: 250px;
-                border-radius: 50%;
-                border: 11px solid #4073A3;
+                width: 270px;
+                height: 270px;
             }
-
             .about-text{
-                margin-top: -40px;
-                width: 70%;
-
                 p{
-                    margin-top: 40px;
-                    display: block;
                     font-size: 20px;
-                    word-wrap: wrap;
-                    font-weight: 300;
                 }
             }
 
             .about-resume{
-                margin-top: 40px;
-                a{
-                    text-decoration: none;
-                    color: white;
-                }
-                span{
-                    margin-right: 20px;
-                }
+                text-align: center;
+                font-size: 20px;
             }
         }
     }
-
-
     .skills-section{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-
         .grid-skills{
-            margin-top: 100px;
-            display: grid;
             grid-template-columns: repeat(5, 1fr);
-            grid-template-rows: repeat(3, 1fr);
-            justify-items: center;
-            gap: 15px 0px;
-
             .grid-skills-item{
                 img{
-                    width: 50px;
-                    height: 50px;
-                    margin: auto;
+                    width: 70px !important;
+                    height: 70px !important;
                 }
-
                 span{
-                    display: block;
-                    text-align: center;
-                    margin-top: 20px;
                     font-size: 20px;
-                    font-weight: 300;
                 }
             }
+
         }
-        
-        p {
+        p{
+            text-align: center;
             margin-top: 40px;
             font-size: 20px;
             font-weight: 400;
@@ -210,200 +400,105 @@
     }
 
     .work-section{
-        .work-showcase{    
-            display: block;
-            
-            .work:nth-child(2){
-                flex-direction: column-reverse;
-            }
-
+        .work-showcase{     
             .work{
-                margin-top: 120px;
-                display: flex;
-                text-align: center;
-                flex-direction: column;
-                align-items: center;
-                gap: 20px;
-
-                img {
+                .work-text{
+                    p{
+                        text-align: left;
+                    }
+                }
+                img{
                     width: 469px;
                     height: 550px;
-
-                    @for $i from 1 through length($work-frames-color) {
-                        &:nth-child(#{$i}) {
-                            border: 8px solid nth($work-frames-color, $i);
-                        }
-                    }
-                }
-
-                .work-text{
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: center;
-                    width: 60%;
-
-                    h4{
-                        font-size: 40px;
-                        font-weight: 400;
-                    }
-        
-                    p {
-                        width: 100%;
-                        text-align: center;
-                        margin-top: 20px;
-                        font-size: 20px;
-                        font-weight: 400;
-                        line-height: 40px;
-                    } 
-                }
-            }
-        }
-        p{
-            margin-top: 40px;
-            font-size: 20px;
-            font-weight: 400;
-        }
-    }
-
-    .contact-section {
-        margin-bottom: 200px;
-
-        .contact-container {
-            
-            .contact-form{
-                .input-form {
-                    margin-top: 40px;
-                    width: 78%;
-                    height: 50px;
-                    font-size: 20px;
-                    font-weight: 400;
-                    border: none;
-                    border-bottom: 2px solid #ffffff;
-                    background-color: transparent;
-                    color: #ffffff;
-                    outline: none;
-                    transition: border-bottom-color 0.7s;
-                    font-family: "Quicksand", sans-serif !important;
-        
-                    &:placeholder{
-                        color: rgba(255,255,255,0.7)
-                    }
-                    &:focus{
-                        border-bottom-color: #FB2576;
-                    }
-                }    
-                
-                textarea{
-                    resize: none;
-                }
-            }
-
-            .social-media{
-                a{
-                    svg{
-                        margin-top: 10px;
-                        width: 50px;
-                        height: 50px;
-                        cursor: pointer;    
-                        transition: all .2s ease-in-out;
-        
-                        &:hover{
-                            fill: #FB2576;
-                            transform: scale(1.2);
-                        }
-                    }
                 }
             }
         }
     }
+}
 
-    footer{
-        display: block;
-        background-color: #D9D9D9;
-        color: black;
-        text-align: center;
-        height: 30px;
+@media screen and (min-width: 1024px) {
 
-        p {
-            padding-top: 10px;
-            font-size: 15px;
-            font-weight: bold;
+    nav{
+        ul{
+            li{
+                font-size: 25px;
+            }
         }
     }
 
-    @media screen and (min-width: 1024px) {
-
-        .navbar{
-            .menu-navbar{
-                ul{
-                    li{
-                        font-size: 25px;
-                    }
-                }
+    .text-animator{
+        .main-wrapper{
+            h1{
+                font-size: 60px;
+            }
+            .pharse-animated{
+                display: inline-block;
+                width: fit-content;
             }
         }
+    }
 
-        .section{
-            margin-left: 175px;
-            text-align: unset;
-        }
+    .section{
+        margin-left: 150px;
+        text-align: unset;
+    }
 
-        .about-section{
-            .about-wrapper{
-                flex-direction: row;
-                img{
-                    width: 350px;
-                    height: 350px;
-                }
-                .about-text{
-                    p{
-                        font-size: 25px;
-                    }
-                }
-
-                .about-resume{
-                    text-align: center;
-                    font-size: 20px;
-                }
+    .about-section{
+        .about-wrapper{
+            flex-direction: row;
+            img{
+                width: 350px;
+                height: 350px;
             }
-        }
-        .skills-section{
-            display: block ;
-            text-align: unset;
-            .grid-skills{
-                grid-template-columns: repeat(6, 1fr);
-                margin-right: 250px ;
-            }
-            .grid-skills-item{
-                img{
-                    width: 100px !important;
-                    height: 100px !important;
-                }
-                span{
+            .about-text{
+                p{
                     font-size: 25px;
                 }
             }
-        }
 
-        .work-section{
-            .work-showcase{     
-                .work{
-                    flex-direction: row !important;
-                    .work-text{
-                        p{
-                            text-align: left;
-                        }
+            .about-resume{
+                text-align: center;
+                font-size: 20px;
+            }
+        }
+    }
+
+    .skills-section{
+        display: block ;
+        text-align: unset;
+        .grid-skills{
+            grid-template-columns: repeat(6, 1fr);
+            margin-right: 250px ;
+        }
+        .grid-skills-item{
+            img{
+                width: 100px !important;
+                height: 100px !important;
+            }
+            span{
+                font-size: 25px;
+            }
+        }
+    }
+
+    .work-section{
+        .work-showcase{     
+            .work{
+                flex-direction: row !important;
+                .work-text{
+                    p{
+                        text-align: left;
                     }
                 }
             }
         }
+    }
 
-        .contact-section{
-            .contact-container{
-                .btn{
-                    margin-left: calc(50% - 180px);
-                }
+    .contact-section{
+        .contact-container{
+            .btn{
+                margin-left: calc(50% - 180px);
             }
         }
     }
+}
